fix graphics performance on mobile/fullscreen
set fixed height because flexbox is causing redraws for some reason

--- a/edice/html/elm-dice.css
+++ b/edice/html/elm-dice.css
@@ -321,6 +321,7 @@ input[type="range"]::-webkit-slider-runnable-track {
 }
 .edBoard--svg {
   min-height: 0;
+  max-width: 100%;
   font-size: 33%;
   overflow: visible !important;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -1206,16 +1207,11 @@ input[type="range"]::-webkit-slider-runnable-track {
   }
   .edBoard {
     margin-top: 0px;
-    flex-grow: 2;
-    flex-shrink: 2;
-    flex-basis: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
   }
   .edBoard--svg {
-    max-height: 100%;
+    max-height: 101%;
   }
   .edGame__meta, .edBoxes, .edGame__meta2, .edTables, .edPlayerBoxes, .edGameDetails {
     display: none !important;
